--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
       - run: docker build -t ${{ secrets.DOCKER_USERNAME }}/multi-server ./server
       - run: docker build -t ${{ secrets.DOCKER_USERNAME }}/multi-worker ./worker
 
-      - run: docker push ${{ secrets.DOCKER_USERNAME }/multi-client
-      - run: docker push ${{ secrets.DOCKER_USERNAME }/multi-nginx
-      - run: docker push ${{ secrets.DOCKER_USERNAME }/multi-server
-      - run: docker push ${{ secrets.DOCKER_USERNAME }/multi-worker
+      - run: docker push ${{ secrets.DOCKER_USERNAME }}/multi-client
+      - run: docker push ${{ secrets.DOCKER_USERNAME }}/multi-nginx
+      - run: docker push ${{ secrets.DOCKER_USERNAME }}/multi-server
+      - run: docker push ${{ secrets.DOCKER_USERNAME }}/multi-worker
  
